# pathvein

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  IMPROVEMENTS.md  OPTIMIZATIONS.md  README.md  benchmark_results_python.json  benchmark_results_rust.json  docker-compose.yaml  mkdocs.yml  package.json  profile_walk.py  pyproject.toml
.changeset/: angry-cougars-own.md  angry-cups-flow.md  beige-planets-chew.md  chatty-pianos-deny.md  chatty-radios-hunt.md  chatty-ways-yell.md  config.json  documentation-site-setup.md  early-trees-listen.md  eight-cats-film.md  empty-planes-report.md  fix-test-edge-case.md  flat-points-destroy.md  green-cups-protect.md  lovely-numbers-sleep.md  many-apes-care.md  new-mails-teach.md  performance-and-quality-improvements.md  polite-drinks-tan.md  proper-changeset-rule.md  quiet-foxes-camp.md  real-ligers-repair.md  rust-backend-integration.md  slimy-goats-talk.md  smooth-mayflies-nail.md  stale-humans-crash.md  stupid-cows-relate.md  tall-adults-laugh.md  tiny-buckets-deny.md
.cursor/rules/: 01-project-overview.mdc  02-python-code-style.mdc  03-learning-new-cursor-rules.mdc
.cursor/rules/registry/: changeset-creation.mdc
.github/workflows/: benchmark.yml  check.yaml  docs.yaml  release.yaml
bench/: BENCHMARK_FIX_RESULTS.md  README.md  __init__.py  bench_path.py  benchmark_backends.py  benchmark_results_rust.json  compare_benchmark_results.py  test_benchmark.py
docs/: README.md  index.md
docs/about/: architecture.md  changelog.md
docs/api/: backend.md  functions.md  index.md  pattern.md  types.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: patterns.md  scanning.md  shuffling.md
integration_tests/: test_s3_paths.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/about/architecture/: index.html
latest/about/changelog/: index.html
latest/api/: index.html
latest/api/backend/: index.html
latest/api/functions/: index.html
latest/api/pattern/: index.html
latest/api/types/: index.html
latest/getting-started/installation/: index.html
latest/getting-started/quick-start/: index.html
latest/guide/patterns/: index.html
latest/guide/scanning/: index.html
latest/guide/shuffling/: index.html
latest/search/: search_index.json
pathvein/: __init__.py  _path_utils.py  cli.py  lib.py  pattern.py  requirements.py
src/: file_pattern.rs  lib.rs  pattern.rs  walk.rs
src/pathvein/: __init__.py  _backend.py  _path_utils.py  cli.py  lib.py  pattern.py
tests/: strategies.py  test_cli.py  test_lib.py  test_s3_paths.py
