[package]
name = "pathvein"
version = "0.9.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "_pathvein_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
walkdir = "2.5"
globset = "0.4"
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
