[package]
name = "pathvein"
version = "0.9.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "_pathvein_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
ignore = "0.4"
globset = "0.4"
smallvec = "1.13"
lru = "0.12"
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

# NOTE: target-cpu is NOT set here intentionally
# - Distributed wheels need to work on any CPU (baseline x86_64)
# - Users building from source can enable with:
#   RUSTFLAGS="-C target-cpu=native" pip install --no-binary pathvein pathvein
# - This enables AVX2/AVX-512 and other CPU-specific optimizations
