[project]
name = "pathvein"
version = "0.9.0"
description = "Rich and deep file structure pattern matching."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pydantic>=2.10.6", "typing-extensions>=4.12.2"]

[project.scripts]
pathvein = "pathvein.cli:main"

[project.optional-dependencies]
cli = ["typer>=0.13.1"]  # CLI commands (install with pathvein[cli])
s3 = ["fsspec[s3]>=2024.10.0,<2026.0.0", "universal-pathlib>=0.2.5"]
docs = [  # Documentation (install with pathvein[docs])
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mike>=2.1.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pathvein._pathvein_rs"
python-source = "src"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "universal-pathlib>=0.2.5",
    "hypothesis-fspaths>=0.1",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.113.0",
]

[tool.pytest.ini_options]
addopts = "--cov=pathvein --cov-report html --cov-report term --hypothesis-show-statistics"
testpaths = ["tests"]  # Exclude bench/ from regular test runs
